# Orange-GameEngine

./: CMakeLists.txt  ENGINE_STATUS.md  LICENSE  NEXT_SESSION_TODO.md  README.md  main.cpp
assets/: models
engine/core/: Engine.cpp  Engine.h  Profiler.h
engine/graphics/: RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h
engine/input/: InputManager.cpp  InputManager.h
engine/optimization/: Profiler.cpp  Profiler.h
engine/physics/: Physics.cpp  Physics.h
engine/rhi/: IRhiDevice.cpp  IRhiDevice.h
game/: Game.cpp  Game.h
game/enemies/: Enemy.cpp  Enemy.h
game/player/: Player.cpp  Player.h
include/: third-person-shooter-engine.h
